tests/baselines/reference/tsxFragmentErrors.errors.txt
file.tsx(9,7): error TS2304: Cannot find name 'div'.
file.tsx(9,7): error TS17015: Expected corresponding closing tag for JSX fragment.
file.tsx(9,11): error TS17014: JSX fragment has no corresponding closing tag.
file.tsx(11,17): error TS1005: '</' expected.


==== file.tsx (4 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    <>hi</div> // Error
          ~~~
!!! error TS2304: Cannot find name 'div'.
          ~~~
!!! error TS17015: Expected corresponding closing tag for JSX fragment.
              ~~~~~~~~~
    
    
    <>eof   // Error
    ~~
!!! error TS17014: JSX fragment has no corresponding closing tag.
                    
!!! error TS1005: '</' expected.